--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FakeStore</string>
+    <string name="menu">MENU</string>
+    <string name="tltUsuario">USUARIOS</string>
+    <string name="tltCategoria">CATEGORIAS</string>
 </resources>
