Actualizacion de pantallas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="menu">MENU</string>
     <string name="tltUsuario">USUARIOS</string>
     <string name="tltCategoria">CATEGORIAS</string>
+    <string name="tltBienvenidos">BIENVENIDOS</string>
+
 </resources>
